<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bote</string>
    <string name="action_new_email">New email</string>
    <string name="action_send_email">Send email</string>
    <string name="action_start_bote">Connect to network</string>
    <string name="action_stop_bote">Disconnect from network</string>
    <string name="action_settings">Settings</string>

    <string name="start_i2p_android">It appears that I2P Android is not running. Would you like to start it?</string>

    <string name="items_selected">%s selected</string>
    <string name="action_delete">Delete</string>
    <string name="action_mark_read">Mark read</string>
    <string name="action_mark_unread">Mark unread</string>
    <string name="action_move_to">Move to</string>

    <string name="drawer_open">Open nav</string>
    <string name="drawer_close">Close nav</string>

    <string name="enter_password">Enter password:</string>
    <string name="checking_password">Checking password&#8230;</string>
    <string name="password_incorrect">Password was incorrect</string>
    <string name="password_file_error">Could not read password verification file</string>
    <string name="not_authed">Not authenticated</string>

    <string name="folder_inbox">Inbox</string>
    <string name="folder_outbox">Outbox</string>
    <string name="folder_sent">Sent</string>
    <string name="folder_trash">Trash</string>
    <string name="address_book">Address book</string>
    <string name="network_status">Network status</string>

    <string name="not_started">Not started</string>
    <string name="connect_delay">Waiting 3 minutes&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected">Connected</string>
    <string name="error">Error</string>

    <string name="folder_empty">Folder is empty</string>
    <string name="folder_does_not_exist">Folder does not exist</string>

    <plurals name="n_new_emails">
        <item quantity="one">One new email</item>
        <item quantity="other">%d new emails</item>
    </plurals>

    <string name="queued">Queued</string>
    <string name="sending">Sending</string>
    <string name="sent_to_short">Sent %1$d of %2$d</string>
    <string name="sent_to">Sent to %1$d out of %2$d recipients</string>
    <string name="email_sent">Email sent</string>
    <string name="gateway_disabled">Gateway disabled</string>
    <string name="no_identity_matches">No identity matches the sender/from field: %s</string>
    <string name="invalid_recipient">Invalid recipient address: %s</string>
    <string name="error_creating_packets">Error creating email packets: %s</string>
    <string name="error_sending">Error while sending email: %s</string>
    <string name="error_saving_metadata">Error saving email metadata: %s</string>

    <string name="email_from">From:</string>
    <string name="email_to">To:</string>
    <string name="email_sent">Sent:</string>
    <string name="email_received">Received:</string>
    <string name="email_status">Status:</string>
    <string name="reply">Reply</string>

    <string name="compose">Compose</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose email</string>
    <string name="add_one_recipient">Add at least one recipient.</string>
    <string name="email_queued_for_sending">Email queued for sending</string>

    <string name="response_prefix_re">Re:</string>
    <string name="response_prefix_re_hide" translatable="false">Re:</string>
    <string name="response_quote_wrote">%s wrote:</string>
    <string name="response_quote_wrote_hide" translatable="false">%s wrote:</string>

    <string name="address_book_empty">Address book is empty</string>
    <string name="action_new_contact">New contact</string>

    <string name="contact_name">Contact name</string>
    <string name="email_destination">Email destination</string>
    <string name="label_browse">Browse</string>
    <string name="save_contact">Save contact</string>
    <string name="delete_contact">Delete contact?</string>

    <string name="network_info_unavailable">Network information is not available because Bote hasn\'t started connecting to the network yet.</string>
    <string name="local_destination">Local Destination:</string>
    <string name="not_set">Not set</string>
    <string name="kademlia_peers">Kademlia Peers:</string>
    <string name="relay_peers">Relay Peers:</string>
    <string name="banned_peers">Banned Peers:</string>

    <string name="pref_title_general">General</string>
    <string name="pref_summ_general">General settings and default identity settings</string>
    <string name="pref_title_autoMail">Auto-check mail</string>
    <string name="pref_title_checkInterval">Check interval</string>
    <string name="pref_summ_checkInterval">%s minutes</string>
    <string name="pref_title_delivery">Delivery status</string>
    <string name="pref_summ_delivery">Check delivery status of sent emails</string>
    <string name="pref_title_privacy">Privacy</string>
    <string name="pref_title_hideLocale">Hide locale</string>
    <string name="pref_summ_hideLocale">Use English for text added to outgoing emails (\'Re:\', \'wrote:\', etc.)</string>
    <string name="pref_title_sentTime">Sent time</string>
    <string name="pref_summ_sentTime">Include sent time in outgoing emails</string>
    <string name="pref_title_routing">Routing</string>
    <string name="pref_title_numHops">Relays</string>
    <string name="pref_summ_numHops">Use %s relays when sending mail</string>
    <string name="pref_title_minDelay">Minimum delay per hop</string>
    <string name="pref_summ_minDelay">%s minutes</string>
    <string name="pref_title_maxDelay">Maximum delay per hop</string>
    <string name="pref_summ_maxDelay">%s minutes</string>
    <string name="pref_title_i2cp_host">I2CP host</string>
    <string name="pref_title_i2cp_port">I2CP port</string>

    <string name="pref_title_change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Password changed successfully</string>

    <string name="pref_title_identities">Identities</string>
    <string name="new_identity">New identity...</string>
    <string name="edit_identity">Edit identity</string>
    <string name="public_name">Public name</string>
    <string name="description">Description</string>
    <string name="default_identity">Default identity</string>
    <string name="save_identity">Save identity</string>
    <string name="delete_identity">Delete identity?</string>
    <string name="identity_saved">Identity saved</string>
</resources>
